installed and integrated preline UI

--- a/src/app.html
+++ b/src/app.html
@@ -19,6 +19,7 @@
 
 <body data-sveltekit-preload-data="hover" data-theme="catalyst">
 	<div style="display: contents">%sveltekit.body%</div>
+	<script src="%sveltekit.assets%/preline/preline.js"></script>
 </body>
 
 </html>.
